-- dehydrated/dried/candied fruit working in foods; fruit bread, fried food, candy, fruit bar
-- syrup values reviewed
--- inter-mod compatibility fixed
- dried nuts added
- nuts working in meals and food
- completed remapping
- added herbs to Dressing
- mixed herbs added
- candied nuts added?
- nut butter added (like peanut butter, but with other nuts)

- Dialogue added to Kitchenware Trader
- Sausage lasts longer; has cured variants - DONE!!!
- Old fish sauce barrel recipe removed - DONE!!!
- Honey yogurt has HP healing - DONE!!!
- Alchemy herbs hang on meat racks correctly
- Chopped items can be boiled
- Bread starter max volume increased
- Broth is drinkable
- Clarified broth requires 1/10th as much egg
- Any expanded bread or herbal bread can be ground into appropriate breadcrumbs
- All first person animations removed
- Cooked pickled pumpkin slices fixed
- Dehydrated fruit has full healing; dried fruit has half healing
- Fried veggies can be added to cold pasta
- Syrups (and other liquids) can be added to pies - KINDA DONE??? (check all liquids)
- Fine and strong wine distill into spirits at a buffed rate
- Maple bread crumbs can be put in small trough
- Chickens can actually eat egg shells now
- Cured meat nuggets can be added to soups - DONE!!!
- Cassava whiskey renamed to cassava vodka - DONE!!!
- Bread starter stack size increased from 16 to 5000 - DONE!!!
- Breadcrumbs now have the ExpandedFood class - DONE!!!  breadcrumbs generally nerfed to compensate, grid recipe removed
- Cooked meat can be smashed with rocks
- Crab actually works in all meals that fish does (pasta)
- Meal shape patches fixed - DONE!!! 
- Dumpling shapes added inside meals?

1.6.9

- Food Stuff:
Added Dressing (vinegar + egg white + oil)
Updated fish sauce recipe (check Cooking 104 for details)
Cooked food can be chopped up
Partially cooked & cooked vanilla meat can be charred in the firepit
Soy milk can be added to porridge
Cured meat nuggets can be used in trail mix