@@ -1,48 +1,0 @@
-﻿[
-  {
-    "op": "add",
-    "path": "/transitionableProps",
-    "value": [
-      {
-        "type": "Perish",
-        "freshHours": {
-          "avg": 672
-        },
-        "transitionHours": {
-          "avg": 288
-        },
-        "transitionedStack": {
-          "type": "item",
-          "code": "game:vinegarportion"
-        },
-        "transitionRatio": 1
-      },
-      {
-        "type": "Cure",
-        "freshHours": {
-          "avg": 672
-        },
-        "transitionHours": {
-          "avg": 2016
-        },
-        "transitionedStack": {
-          "type": "item",
-          "code": "expandedfoods:wildstrongspiritportion-{fruit}"
-        },
-        "transitionRatio": 1
-      }
-    ],
-    "side": "server",
-    "file": "wildcraft:itemtypes/liquid/alcohol/spirit.json"
-  },
-  {
-    "op": "add",
-    "path": "/attributes/nutritionPropsWhenInMeal",
-    "value": {
-        "saturation": 160,
-        "foodcategory": "fruit",
-    },
-    "side": "server",
-    "file": "wildcraft:itemtypes/liquid/alcohol/spirit.json"
-  },
-]
