@@ -45,15 +45,15 @@
     "op": "add",
     "path": "/attributes/nutritionPropsWhenInMealByType",
     "value": {
-		"*-cloudberry": { satiety: 160, health: 0.2, foodcategory: "Fruit" },
-		"*-husktomato": { satiety: 160, health: 0.1, foodcategory: "Fruit" },
-		"*-juniper": { satiety: 160, health: 0.1, foodcategory: "Fruit" },
-		"*-wolfberry": { satiety: 160, health: -3, foodcategory: "Fruit" },
-		"*-bitternightshade": { satiety: 160, health: -2, foodcategory: "Fruit" },
-		"*-spindle": { satiety: 160, health: -1, foodcategory: "Fruit" },
-		"*-blacknightshadeunripe": { satiety: 160, health: -0.5, foodcategory: "Fruit" },
-		"*-crowseye": { satiety: 160, health: -5, foodcategory: "Fruit" },
-		"*-seamango": { satiety: 160, health: -4, foodcategory: "Fruit" },
+		"*-cloudberry": { satiety: 160, health: 2, foodcategory: "Fruit" },
+		"*-husktomato": { satiety: 160, health: 1, foodcategory: "Fruit" },
+		"*-juniper": { satiety: 160, health: 1, foodcategory: "Fruit" },
+		"*-wolfberry": { satiety: 160, health: -30, foodcategory: "Fruit" },
+		"*-bitternightshade": { satiety: 160, health: -20, foodcategory: "Fruit" },
+		"*-spindle": { satiety: 160, health: -10, foodcategory: "Fruit" },
+		"*-blacknightshadeunripe": { satiety: 160, health: -5, foodcategory: "Fruit" },
+		"*-crowseye": { satiety: 160, health: -50, foodcategory: "Fruit" },
+		"*-seamango": { satiety: 160, health: -40, foodcategory: "Fruit" },
 		"*": { satiety: 160, health: 0, foodcategory: "Fruit" },
     },
     "side": "server",
