@@ -4,20 +4,6 @@
     "path": "/transitionableProps",
     "value": [
       {
-        "type": "Perish",
-        "freshHours": {
-          "avg": 672
-        },
-        "transitionHours": {
-          "avg": 288
-        },
-        "transitionedStack": {
-          "type": "item",
-          "code": "game:vinegarportion"
-        },
-        "transitionRatio": 1
-      },
-      {
         "type": "Cure",
         "freshHours": {
           "avg": 672
