@@ -70,7 +70,9 @@ THE GREAT WILDCRAFT TRANSITION BEGINS
 - mixed herbs added
 - candied nuts added?
 - nut butter added (like peanut butter, but with other nuts)
+- Liquid values reviewed - DONE!!!
 
+- Spirits no longer turn into vingear - DONE!!!
 - Dialogue added to Kitchenware Trader
 - Sausage lasts longer; has cured variants - DONE!!!
 - Old fish sauce barrel recipe removed - DONE!!!
